# reverie

./: .commitlintrc.json  .dockerignore  .editorconfig  .env.example  .gitignore  .graphifyignore  .markdownlint-cli2.jsonc  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  release-please-config.json
.claude/PRPs/plans/: design-system.plan.md  epub-validation.plan.md  metadata-enrichment-pipeline.plan.md
.claude/PRPs/reports/: auth-oidc-device-tokens-report.md  opds-catalog-report.md  (+10 more)
.github/: labeler.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  docs.yml  label.yml
backend/: CLAUDE.md  Cargo.toml
backend/migrations/: 20260412150001_extensions_enums_and_roles.down.sql  20260412150001_extensions_enums_and_roles.up.sql  20260412150002_core_tables.down.sql  20260412150002_core_tables.up.sql  20260412150003_series_and_metadata.down.sql  20260412150003_series_and_metadata.up.sql  20260412150004_user_features.down.sql  20260412150004_user_features.up.sql  20260412150005_system_tables.down.sql  20260412150005_system_tables.up.sql  20260412150006_triggers_and_functions.down.sql  20260412150006_triggers_and_functions.up.sql  20260412150007_search_rls_and_reserved.down.sql  20260412150007_search_rls_and_reserved.up.sql  20260414000001_add_session_version.down.sql  20260414000001_add_session_version.up.sql  20260414100001_add_skipped_job_status.down.sql  20260414100001_add_skipped_job_status.up.sql  20260415000001_epub_validation.down.sql  20260415000001_epub_validation.up.sql  20260416000001_remove_invalid_validation_status.up.sql  20260417000001_add_enrichment_pipeline.down.sql  20260417000001_add_enrichment_pipeline.up.sql  20260417000002_grant_field_locks_select_ingestion.down.sql  20260417000002_grant_field_locks_select_ingestion.up.sql  20260419000001_add_writeback_pipeline.down.sql  20260419000001_add_writeback_pipeline.up.sql  20260421000001_serialise_writeback_per_manifestation.down.sql  20260421000001_serialise_writeback_per_manifestation.up.sql  20260421000002_writeback_system_context_guc.down.sql  20260421000002_writeback_system_context_guc.up.sql  20260427000001_add_theme_preference.down.sql  20260427000001_add_theme_preference.up.sql  20260428000001_activate_reading_state.down.sql  20260428000001_activate_reading_state.up.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  state.rs  test_support.rs
backend/src/auth/: backend.rs  basic_only.rs  middleware.rs  mod.rs  oidc.rs  theme_cookie.rs  token.rs
backend/src/models/: device_token.rs  ingestion_job.rs  mod.rs  reading_state.rs  role.rs  theme_preference.rs  user.rs  work.rs
backend/src/routes/: auth.rs  enrichment.rs  health.rs  ingestion.rs  metadata.rs  mod.rs  spa.rs  tokens.rs
backend/src/routes/opds/: covers.rs  cursor.rs  download.rs  feed.rs  library.rs  mod.rs  opensearch.rs  root.rs  scope.rs  shelves.rs  tests.rs  xml.rs
backend/src/security/: csp.rs  dist_validation.rs  headers.rs  mod.rs
backend/src/services/: mod.rs
backend/src/services/covers/: cache.rs  error.rs  extract.rs  mod.rs  resize.rs
backend/src/services/enrichment/: cache.rs  confidence.rs  cover_download.rs  dry_run.rs  field_lock.rs  http.rs  lookup_key.rs  mod.rs  orchestrator.rs  policy.rs  queue.rs  value_hash.rs
backend/src/services/enrichment/sources/: google_books.rs  hardcover.rs  mod.rs  open_library.rs
backend/src/services/epub/: container_layer.rs  cover_layer.rs  mod.rs  opf_layer.rs  repack.rs  repair.rs  xhtml_layer.rs  zip_layer.rs
backend/src/services/ingestion/: cleanup.rs  copier.rs  format_filter.rs  mod.rs  orchestrator.rs  path_template.rs  quarantine.rs  watcher.rs
backend/src/services/metadata/: draft.rs  extractor.rs  inversion.rs
backend/src/services/writeback/: cover_embed.rs  error.rs  events.rs  mod.rs  opf_rewrite.rs  orchestrator.rs  path_rename.rs  queue.rs
backend/tests/: cookie_jar_sanity.rs
dev/: seed-library.sh
docker/: init-roles.sql
docs/: astro.config.mjs  claude-code-toolset.md  package-lock.json  schema.md
docs/deployment/: reverse-proxy.md
docs/security/: content-security-policy.md
frontend/: .stylelintrc.json  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/vite-plugins/: csp-hash.ts
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
(+49 files in other folders)
