[package]
name = "tome-api"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Tome ebook library manager — API server"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.8"
axum-login = "0.18"
base64ct = { version = "1", features = ["std"] }
dotenvy = "0.15"
openidconnect = { version = "4", features = ["reqwest"] }
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json", "macros", "migrate"] }
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower-sessions = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
axum-test = "20"
wiremock = "0.6"
