[package]
name = "reverie-api"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Reverie ebook library manager — API server"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
axum-login = "0.18"
base64ct = { version = "1", features = ["std"] }
dotenvy = "0.15"
encoding_rs = "0.8"
futures = "0.3"
governor = "0.8"
hickory-resolver = "0.26"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
notify = "8"
openidconnect = { version = "4", features = ["reqwest"] }
quick-xml = "0.37"
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
subtle = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json", "macros", "migrate"] }
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower-sessions = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
zip = "2"

[dev-dependencies]
axum-test = "20"
wiremock = "0.6"
